Update browser command states during fullscreen state change

Other than regular fullscreen state changes, there is one more change on
Mac -- turning toolbar always on/off during browser fullscreen mode. In
such case, we need to make sure 'Always Show Bookmarks Bar' should be
enabled/disabled accordingly. This CL triggers browser command update
during such transition.

BUG=894004

Change-Id: Ia0a5fb358ca5238492cb8ffca957d10a849ded3c
Reviewed-on: https://chromium-review.googlesource.com/c/1279410
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601200}
Former-commit-id: b29a855fc7905401af264bb34c4cc56d212f2f22