chrome/browser/ui/browser.cc
@@ -888,6 +888,7 @@ void Browser::WindowFullscreenStateChanged() {
 }
 
 void Browser::FullscreenTopUIStateChanged() {
+  command_controller_->FullscreenStateChanged();
   UpdateBookmarkBarState(BOOKMARK_BAR_STATE_CHANGE_TOOLBAR_OPTION_CHANGE);
 }
 
