chrome/browser/ui/views/frame/browser_view_interactive_uitest.cc
@@ -6,6 +6,7 @@
 
 #include "base/macros.h"
 #include "build/build_config.h"
+#include "chrome/app/chrome_command_ids.h"
 #include "chrome/browser/ui/browser_commands.h"
 #include "chrome/browser/ui/exclusive_access/fullscreen_controller.h"
 #include "chrome/browser/ui/views/location_bar/location_bar_view.h"
@@ -77,6 +78,8 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, BrowserFullscreenShowTopView) {
 #if defined(OS_MACOSX)
   // The top view should show up by default.
   EXPECT_TRUE(browser_view->IsTabStripVisible());
+  // The 'Always Show Bookmarks Bar' should be enabled.
+  EXPECT_TRUE(chrome::IsCommandEnabled(browser(), IDC_SHOW_BOOKMARK_BAR));
 
   // Return back to normal mode and toggle to not show the top view in full
   // screen mode.
@@ -88,6 +91,8 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, BrowserFullscreenShowTopView) {
   chrome::ToggleFullscreenMode(browser());
   EXPECT_TRUE(browser_view->IsFullscreen());
   EXPECT_FALSE(browser_view->IsTabStripVisible());
+  // The 'Always Show Bookmarks Bar' should be disabled.
+  EXPECT_FALSE(chrome::IsCommandEnabled(browser(), IDC_SHOW_BOOKMARK_BAR));
 
   // Test toggling toolbar while being in fullscreen mode.
   chrome::ToggleFullscreenToolbar(browser());
@@ -100,6 +105,9 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, BrowserFullscreenShowTopView) {
     top_view_in_browser_fullscreen = true;
 #endif
   EXPECT_EQ(top_view_in_browser_fullscreen, browser_view->IsTabStripVisible());
+  // The 'Always Show Bookmarks Bar' should be enabled if top view is shown.
+  EXPECT_EQ(top_view_in_browser_fullscreen,
+            chrome::IsCommandEnabled(browser(), IDC_SHOW_BOOKMARK_BAR));
 
   // Enter into tab fullscreen mode from browser fullscreen mode.
   FullscreenController* controller =
@@ -108,10 +116,12 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, BrowserFullscreenShowTopView) {
       browser()->tab_strip_model()->GetActiveWebContents();
   controller->EnterFullscreenModeForTab(web_contents, GURL());
   EXPECT_TRUE(browser_view->IsFullscreen());
-  if (browser_view->immersive_mode_controller()->IsEnabled())
-    EXPECT_TRUE(browser_view->IsTabStripVisible());
-  else
-    EXPECT_FALSE(browser_view->IsTabStripVisible());
+  bool top_view_in_tab_fullscreen =
+      browser_view->immersive_mode_controller()->IsEnabled() ? true : false;
+  EXPECT_EQ(top_view_in_tab_fullscreen, browser_view->IsTabStripVisible());
+  // The 'Always Show Bookmarks Bar' should be disabled in tab fullscreen mode.
+  EXPECT_EQ(top_view_in_tab_fullscreen,
+            chrome::IsCommandEnabled(browser(), IDC_SHOW_BOOKMARK_BAR));
 
   // Return back to browser fullscreen mode.
   content::NativeWebKeyboardEvent event(
@@ -124,6 +134,8 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, BrowserFullscreenShowTopView) {
   // This makes sure that the layout was updated accordingly.
   EXPECT_EQ(top_view_in_browser_fullscreen,
             browser_view->tabstrip()->visible());
+  EXPECT_EQ(top_view_in_browser_fullscreen,
+            chrome::IsCommandEnabled(browser(), IDC_SHOW_BOOKMARK_BAR));
 
   // Return to regular mode.
   chrome::ToggleFullscreenMode(browser());
